# gst-itr-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ReadMe-Local.md  alembic.ini  docker-compose.yml  dump.rdb  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_all.py  start_worker.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
app/: main.py
cloudflare-worker/: package-lock.json  package.json  wrangler.toml
docs/: DEMO_PRESENTATION.md  FLOW_DIAGRAMS.md  flowchart.html
migrations/: env.py
scripts/: check_whatsapp_token.py  dev.sh  reset_db.py  setup.sh  test_ocr.py
tests/: conftest.py  test_audit_service.py  test_books_vs_portal.py  test_change_number.py  test_connect_ca.py  test_document_checklist.py  test_einvoice_flow.py  test_ewaybill_flow.py  test_feature_registry_phases.py  test_global_commands_v2.py  test_gst_filing.py  test_gst_filing_flow.py  test_gst_itr_linker.py  test_gst_onboarding.py  test_gst_service.py  test_gst_tax_payment.py  test_gst_wizard.py  test_invoice_parser.py  test_itr_efiling_json.py  test_itr_form_parser.py  test_itr_pdf_json.py  test_itr_service.py  test_itr_workflow.py  test_mismatch_detection.py  test_ml_risk_scoring.py  test_multi_gstin.py  test_notice_service.py  test_notification_service.py  test_pending_itc.py  test_pii_masking.py  test_refund_service.py  test_segment_gating.py  test_session_expiry.py  test_session_migration.py  test_settings_handler.py  test_upload_security.py  test_wa_handlers.py
(+241 files in other folders)
